--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                         <!-- /.intro-carousel__slides -->
                         <div class="intro-carousel__nav">
                             <ul>
-                                <li class="first-carousel__prev" id="first-carousel__prev">
+                                <li class="intro-prev">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="10" fill="none">
                                         <path fill="#693ABB" fill-rule="evenodd" d="M.044 5a.558.558 0 0 1 .558-.558h13.162L10.252.931a.559.559 0 0 1 .79-.79l4.465 4.464a.557.557 0 0 1 0 .79L11.042 9.86a.559.559 0 0 1-.79-.79l3.512-3.511H.602A.558.558 0 0 1 .044 5Z" clip-rule="evenodd"/>
                                     </svg>
                                 </li>
-                                <li class="first-carousel__next" id="first-carousel__next">
+                                <li class="intro-next">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="10" fill="none">
                                         <path fill="#693ABB" fill-rule="evenodd" d="M.044 5a.558.558 0 0 1 .558-.558h13.162L10.252.931a.559.559 0 0 1 .79-.79l4.465 4.464a.557.557 0 0 1 0 .79L11.042 9.86a.559.559 0 0 1-.79-.79l3.512-3.511H.602A.558.558 0 0 1 .044 5Z" clip-rule="evenodd"/>
                                     </svg>
@@ -491,63 +491,6 @@
     <script src="js/slick.min.js"></script>
     <!-- Main JS -->
     <script src="js/main.js"></script>
-
-    <script>
-
-        function setProgress(index, $slider, $progressBar) {
-            let infinite = $slider.slick('slickGetOption', 'infinite');
-            let calc;
-            if (infinite == false) {
-                let slidesToShow = $slider.slick('slickGetOption', 'slidesToShow');
-                calc = ((index + slidesToShow) / ($slider.slick('getSlick').slideCount)) * 100;
-            } else {
-                calc = ((index + 1) / ($slider.slick('getSlick').slideCount)) * 100;
-            }
-
-            $progressBar.css('background-size', `${calc}% 100%`).attr('aria-valuenow', calc);
-        }
-
-        let initStatusSliderMems = false;
-        $('.mems-carousel').each(function () {
-            let sliderSlick = $(this),
-                sliderNav = sliderSlick.next('.mems-carousel__nav'),
-                progressBar = sliderNav.find('.progress-bar-mems');
-
-            function initCallback() {
-                initStatusSliderMems = true;
-
-                setTimeout(function () {
-                    setProgress(0, sliderSlick, progressBar);
-                }, 300);
-            }
-
-            sliderSlick.slick({
-                initialize: initCallback(),
-                infinite: true,
-                slidesToShow: 3,
-                slidesToScroll: 3,
-                centerMode: true,
-                prevArrow: $('.arrows-mems__prev'),
-                nextArrow: $('.arrows-mems__next')
-            });
-
-            // Project main page slick start
-            sliderSlick.on('beforeChange', function (event, slick, currentSlide, nextSlide) {
-                setProgress(nextSlide, sliderSlick, progressBar);
-            });
-        });
-
-        $('.intro-carousel__slides').slick({
-            infinite: false,
-            slidesToShow: 2,
-            slidesToScroll: 1,
-            centerMode: false,
-            arrows: false,
-            prevArrow: $('#intro-carousel__prev'),
-            nextArrow: $('#intro-carousel__next')
-        });
-        
-    </script>
 
 </body>
 </html>
