Add mobile version

--- a/index.html
+++ b/index.html
@@ -23,20 +23,6 @@
                 <a href="#">
                     <img src="img/logo.svg" alt="Logo">
                 </a>
-            </div>
-            <!-- /.header-top -->
-            <div class="header-bottom">
-                <nav class="header-bottom__nav">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Benefits</a></li>
-                        <li><a href="#">Mems</a></li>
-                        <li><a href="#">NFT Collection</a></li>
-                        <li><a href="#">Important</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </nav>
-                <!-- /.header-bottom__nav -->
                 <a href="#" class="fill-btn">
                     <span>
                         Connect Wallet
@@ -46,6 +32,35 @@
                     </span>
                 </a>
                 <!-- /.fill-btn -->
+            </div>
+            <!-- /.header-top -->
+            <div class="header-bottom">
+                <div class="container">
+                    <div class="header-bottom__row">
+                        <nav class="header-bottom__nav">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Benefits</a></li>
+                                <li><a href="#">Mems</a></li>
+                                <li><a href="#">NFT Collection</a></li>
+                                <li><a href="#">Important</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </nav>
+                        <!-- /.header-bottom__nav -->
+                        <a href="#" class="fill-btn">
+                            <span>
+                                Connect Wallet
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="10" fill="none">
+                                    <path fill="#fff" fill-rule="evenodd" d="M.044 5a.558.558 0 0 1 .558-.558h13.162L10.252.931a.559.559 0 0 1 .79-.79l4.465 4.464a.557.557 0 0 1 0 .79L11.042 9.86a.559.559 0 0 1-.79-.79l3.512-3.511H.602A.558.558 0 0 1 .044 5Z" clip-rule="evenodd"/>
+                                </svg>
+                            </span>
+                        </a>
+                        <!-- /.fill-btn -->
+                    </div>
+                    <!-- /.header-bottom__row -->
+                </div>
+                <!-- /.container -->
             </div>
             <!-- /.header-bottom -->
         </div>
@@ -186,8 +201,8 @@
 
     <section class="mems">
         <div class="container">
-            <h2 class="big-title">MEMS</h2>
-            <!-- /.big-title -->
+            <h2 class="section-title">MEMS</h2>
+            <!-- /.section-title -->
             <p>
                 We believe that science and medicine have the power to change the world for the better, and we are dedicated to supporting those who work tirelessly in these fields.
             </p>
@@ -256,47 +271,47 @@
     <section class="collection">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-5 col-lg-5">
                     <div class="collection-mems">
                         <div class="row">
-                            <div class="col-md-7">
+                            <div class="col-6 .col-md-7">
                                 <div class="collection-mems__ill">
                                     <img src="img/mems-collection-3.jpg" alt="Image">
                                 </div>
                                 <!-- /.collection-mems__ill -->
                             </div>
-                            <!-- /.col-md-7 -->
-                            <div class="col-md-5">
+                            <!-- /.col-6 .col-md-7 -->
+                            <div class="col-6 .col-md-5">
                                 <div class="collection-mems__ill">
                                     <img src="img/mems-collection-2.jpg" alt="Image">
                                 </div>
                                 <!-- /.collection-mems__ill -->
                             </div>
-                            <!-- /.col-md-5 -->
+                            <!-- /.col-6 .col-md-5 -->
                         </div>
                         <!-- /.row -->
                         <div class="row">
-                            <div class="col-md-5">
+                            <div class="col-6 .col-md-5">
                                 <div class="collection-mems__ill">
                                     <img src="img/mems-collection-2.jpg" alt="Image">
                                 </div>
                                 <!-- /.collection-mems__ill -->
                             </div>
-                            <!-- /.col-md-5 -->
-                            <div class="col-md-7">
+                            <!-- /.col-6 .col-md-5 -->
+                            <div class="col-6 .col-md-7">
                                 <div class="collection-mems__ill">
                                     <img src="img/mems-collection-3.jpg" alt="Image">
                                 </div>
                                 <!-- /.collection-mems__ill -->
                             </div>
-                            <!-- /.col-md-7 -->
+                            <!-- /.col-6 .col-md-7 -->
                         </div>
                         <!-- /.row -->
                     </div>
                     <!-- /.collection-mems -->
                 </div>
-                <!-- /.col-md-5 -->
-                <div class="col-md-6 offset-md-1">
+                <!-- /.col-md-5 col-lg-5 -->
+                <div class="col-md-7 col-lg-6 offset-lg-1">
                     <div class="collection-content">
                         <h2 class="big-title">MEM<span>NFT Collection</span></h2>
                         <!-- /.big-title -->
@@ -315,7 +330,7 @@
                     </div>
                     <!-- /.collection-content -->
                 </div>
-                <!-- /.col-md-6 offset-md-1 -->
+                <!-- /.col-md-7 col-lg-6 offset-lg-1 -->
             </div>
             <!-- /.row -->
         </div>
@@ -331,7 +346,7 @@
                 Proceeds from the sale of our NFTs will go towards supporting medical and STEM initiatives. We also provide information on how people can get involved with the project or make donations via our corporate wallet. Together, we can make a difference in the world of science and medicine.
             </p>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="important-card">
                         <div class="important-card__count">
                             01
@@ -345,8 +360,8 @@
                     </div>
                     <!-- /.important-card -->
                 </div>
-                <!-- /.col-md-4 -->
-                <div class="col-md-4">
+                <!-- /.col-md-6 col-lg-4 -->
+                <div class="col-md-6 col-lg-4">
                     <div class="important-card">
                         <div class="important-card__count">
                             02
@@ -369,9 +384,9 @@
                     </a>
                     <!-- /.fill-btn -->
                 </div>
-                <!-- /.col-md-4 -->
-                <div class="col-md-4">
-                    <div class="important-card">
+                <!-- /.col-md-6 col-lg-4 -->
+                <div class="col-md-12 col-lg-4">
+                    <div class="important-card important-card__last">
                         <div class="important-card__count">
                             03
                         </div>
@@ -384,7 +399,7 @@
                     </div>
                     <!-- /.important-card -->
                 </div>
-                <!-- /.col-md-4 -->
+                <!-- /.col-md-12 col-lg-4 -->
             </div>
             <!-- /.row -->
         </div>
