--- a/mint.html
+++ b/mint.html
@@ -23,20 +23,6 @@
                 <a href="#">
                     <img src="img/logo.svg" alt="Logo">
                 </a>
-            </div>
-            <!-- /.header-top -->
-            <div class="header-bottom">
-                <nav class="header-bottom__nav">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Benefits</a></li>
-                        <li><a href="#">Mems</a></li>
-                        <li><a href="#">NFT Collection</a></li>
-                        <li><a href="#">Important</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </nav>
-                <!-- /.header-bottom__nav -->
                 <a href="#" class="fill-btn">
                     <span>
                         Connect Wallet
@@ -46,6 +32,35 @@
                     </span>
                 </a>
                 <!-- /.fill-btn -->
+            </div>
+            <!-- /.header-top -->
+            <div class="header-bottom">
+                <div class="container">
+                    <div class="header-bottom__row">
+                        <nav class="header-bottom__nav">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Benefits</a></li>
+                                <li><a href="#">Mems</a></li>
+                                <li><a href="#">NFT Collection</a></li>
+                                <li><a href="#">Important</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </nav>
+                        <!-- /.header-bottom__nav -->
+                        <a href="#" class="fill-btn">
+                            <span>
+                                Connect Wallet
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="10" fill="none">
+                                    <path fill="#fff" fill-rule="evenodd" d="M.044 5a.558.558 0 0 1 .558-.558h13.162L10.252.931a.559.559 0 0 1 .79-.79l4.465 4.464a.557.557 0 0 1 0 .79L11.042 9.86a.559.559 0 0 1-.79-.79l3.512-3.511H.602A.558.558 0 0 1 .044 5Z" clip-rule="evenodd"/>
+                                </svg>
+                            </span>
+                        </a>
+                        <!-- /.fill-btn -->
+                    </div>
+                    <!-- /.header-bottom__row -->
+                </div>
+                <!-- /.container -->
             </div>
             <!-- /.header-bottom -->
         </div>
@@ -83,14 +98,14 @@
             <!-- /.mint-page__adv -->
             <div class="mint-page__info">
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-6 col-lg-5">
                         <div class="mint-page__preview">
                             <img src="img/mems-collection-2.jpg" alt="Image">
                         </div>
                         <!-- /.mint-page__preview -->
                     </div>
-                    <!-- /.col-md-5 -->
-                    <div class="col-md-7">
+                    <!-- /.col-md-6 col-lg-5 -->
+                    <div class="col-md-6 col-lg-7">
                         <div class="mint-page__desc">
                             <h4>MEM</h4>
                             <div class="count">1/1800 (One NFT cost 0.3ETH)</div>
@@ -123,7 +138,7 @@
                         </div>
                         <!-- /.mint-page__desc -->
                     </div>
-                    <!-- /.col-md-7 -->
+                    <!-- /.col-md-6 col-lg-7 -->
                 </div>
                 <!-- /.row -->
             </div>
